--- a/templates/_title.html.ejs
+++ b/templates/_title.html.ejs
@@ -1,5 +1,5 @@
 <div id="title">
-    <h1>XPlane2Blender</h1>
+    <h1><a href="/index.html">XPlane2Blender</a></h1>
     <p>Scenery &amp; Cockpit import &amp; export scripts for Blender and the X-Plane Flight Simulator</p>
     <hr>
     <span class="credits left">Project maintained by <a href="https://github.com/der-On">der-On</a></span>
